--- a/src/main/resources/templates/articleList.html
+++ b/src/main/resources/templates/articleList.html
@@ -27,6 +27,9 @@
         </div>
         <br>
     </div>
+
+    <button type="button" class="btn btn-secondary" onclick="location.href='/logout'">로그아웃</button>
+
 </div>
 
 <script src="/js/article.js"></script>
